welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: illegal start of simple expression
  if ((a-b)>=10)) {return true} 
                ^